# AgribotTools

./: .gitignore  404.html  LICENSE.md  MANIFEST.in  README.md  binmask_to_yolo.py  convert_binary_to_yolo.py  convert_mask_to_box.py  gui.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  yolo_to_ls.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-docs.yml
api/conversions/: index.html
api/formats/: index.html
api/utils/: index.html
contributing/: index.html
conversions/overview/: index.html
conversions/usage/: index.html
converter/: __init__.py  binmask_to_ls.py  binmask_to_yolo.py  converter.py  seg_ls_to_bbox_ls.py  utils.py
docs/: contributing.md  getting-started.md  index.md
docs/api/: conversions.md  formats.md  utils.md
docs/conversions/: overview.md  usage.md
docs/formats/: binmask.md  label-studio.md  overview.md  ultralytics.md  yolo.md
docs/gui/: usage.md
examples/: ls_to_ul_test.py  yolo_to_ls_test.py  yolo_to_ul_test.py
formats/binmask/: index.html
formats/label-studio/: index.html
formats/overview/: index.html
formats/ultralytics/: index.html
formats/yolo/: index.html
getting-started/: index.html
gui/usage/: index.html
scripts/: binmask_to_ls.py  binmask_to_yolo.py  import_tasks_ls.py  ls_to_ul.py  ls_to_yolo.py  seg_ls_to_bbox_ls.py  ul_to_ls.py  ul_to_yolo.py  utils.py  yolo_to_binmask.py  yolo_to_ls.py  yolo_to_ul.py
search/: search_index.json
src/: file_utils.py
src/cvtoolkit/: __init__.py  mask.py  rle.py
tools/: converter.py  label_studio.py
(+19 files in other folders)
