[metadata]
name = agribottools
version = 0.1.0
description = Utilities to convert datasets between Label Studio, YOLO and Ultralytics formats
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.md
author = CNR Stiima

[options]
packages = find:
include_package_data = true
install_requires =
    opencv-python
    numpy
    python-dotenv
    tqdm
    PyYAML
    pillow
    requests
python_requires = >=3.8

[options.package_data]
* = *.txt, *.md, *.yaml, *.yml

[options.packages.find]
where = .

